--- a/Resources/Private/Partials/Mail/Cart.html
+++ b/Resources/Private/Partials/Mail/Cart.html
@@ -7,18 +7,18 @@
     </colgroup>
     <thead>
     <tr class="first last" style="background-color:#3b7eb0; color:#fff;">
-        <th rowspan="1" colspan="2" style="text-align: left;">
+        <th rowspan="1" colspan="2" style="text-align: left; padding: 3px;">
             <f:translate key="tx_cart_domain_model_order_product.title"/>
         </th>
-        <th colspan="1" class="a-center">
+        <th colspan="1" class="a-center" style="padding: 3px;">
             <f:translate key="tx_cart_domain_model_order_product.price"/>
         </th>
 
-        <th rowspan="1" class="a-center">
+        <th rowspan="1" class="a-center" style="padding: 3px;">
             <f:translate key="tx_cart_domain_model_order_product.count"/>
         </th>
 
-        <th colspan="1" class="a-center">
+        <th colspan="1" class="a-center" style="padding: 3px;">
             <f:translate key="tx_cart_domain_model_order_product.price_total"/>
         </th>
     </tr>
