--- a/Resources/Private/Partials/Mail/ProductList.html
+++ b/Resources/Private/Partials/Mail/ProductList.html
@@ -44,7 +44,7 @@
                 <td style="text-align: right;">
                     {variant.quantity}
                 </td>
-                <td style="text-align: right;" class="last">
+                <td style="text-align: right;">
                     <cart:format.currency>{variant.gross}</cart:format.currency>
                 </td>
             </tr>
@@ -64,7 +64,7 @@
         <td style="text-align: right;">
             &nbsp;
         </td>
-        <td class="last">
+        <td>
             &nbsp;
         </td>
     </tr>
@@ -83,7 +83,7 @@
         <td style="text-align: right;">
             {product.quantity}
         </td>
-        <td class="last" style="text-align: right;">
+        <td style="text-align: right;">
             <cart:format.currency>{product.gross}</cart:format.currency>
         </td>
     </tr>
