--- a/Resources/Private/Partials/Mail/TaxList.html
+++ b/Resources/Private/Partials/Mail/TaxList.html
@@ -8,7 +8,7 @@
             <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart.tax_class.{tax_class}"/>
             )
         </td>
-        <td style="text-align: right;" class="last">
+        <td style="text-align: right;">
             <span class="price">
                 <cart:format.currency>{tax}</cart:format.currency>
             </span>
