--- a/Resources/Private/Layouts/Mail.html
+++ b/Resources/Private/Layouts/Mail.html
@@ -1,1 +1,20 @@
-<f:render section="main"/>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+    <title></title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="format-detection" content="telephone=no">
+</head>
+
+<body bgcolor="#ffffff" link="#355222" alink="#18778E" vlink="#389CB4" style="font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
+
+<table width="600" cellpadding="0" cellspacing="0" border="0" style="font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
+    <tr>
+        <td width="600" valign="top" align="left" class="tx-cart" style="font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
+            <f:render section="main"/>
+        </td>
+    </tr>
+</table>
+
+</body>
+</html>
