--- a/Resources/Private/Templates/Mail/Paid/Seller.html
+++ b/Resources/Private/Templates/Mail/Paid/Seller.html
@@ -1,23 +1,47 @@
 <f:layout name="Mail"/>
 
 <f:section name="main">
-    <p style="background-color:#3b7eb0;color:#fff;padding:3px;">
+    <p style="background-color:#3b7eb0;color:#fff;padding:5px;">
         <b><f:translate key="tx_cart.mail.order_information" />:</b>
     </p>
 
     <f:render partial="Mail/Address" arguments="{billingAddress: billingAddress, shippingAddress: shippingAddress}"/>
 
-    <p style="background-color:#3b7eb0;color:#fff;padding:3px;">
+    <p style="background-color:#3b7eb0;color:#fff;padding:5px;">
         <b><f:translate key="tx_cart.mail.order_summary" />:</b>
     </p>
 
-    <f:if condition="{orderItem.orderNumber}">
-        <b><f:translate key="tx_cart_domain_model_order_item.order_number" />:</b>  {orderItem.orderNumber} <br />
-    </f:if>
-    <b><f:translate key="tx_cart_domain_model_order_item.order_date" />:</b> <f:format.date format="d.m.Y" date="{orderItem.orderDate}" /><br />
-    <b><f:translate key="tx_cart.mail.payment_method" />:</b>  {orderItem.payment.name} ({orderItem.payment.status}) <br />
-    <b><f:translate key="tx_cart.mail.shipping_method" />:</b>  {orderItem.shipping.name} ({orderItem.shipping.status}) <br />
-    <br />
+    <table cellspacing="0" border="0">
+        <tbody>
+        <f:if condition="{orderItem.orderNumber}">
+            <tr>
+                <td colspan="2" style="font-family: Arial, Helvetica, sans-serif; font-size: 12px;"><b><f:translate key="tx_cart_domain_model_order_item.order_number" /></b></td>
+                <td style="font-family: Arial, Helvetica, sans-serif; font-size: 12px;">: {orderItem.orderNumber}</td>
+            </tr>
+        </f:if>
+        <tr>
+            <td colspan="2" style="font-family: Arial, Helvetica, sans-serif; font-size: 12px;"><b><f:translate key="tx_cart_domain_model_order_item.order_date" /></b></td>
+            <td style="font-family: Arial, Helvetica, sans-serif; font-size: 12px;">: <f:format.date format="d.m.Y" date="{orderItem.orderDate}" /></td>
+        </tr>
+        <tr>
+            <td colspan="2" style="font-family: Arial, Helvetica, sans-serif; font-size: 12px;"><b><f:translate key="tx_cart.mail.payment_method" /></b></td>
+            <td style="font-family: Arial, Helvetica, sans-serif; font-size: 12px;">: {orderItem.payment.name}</td>
+        </tr>
+        <tr>
+            <td colspan="2" style="font-family: Arial, Helvetica, sans-serif; font-size: 12px;"><b><f:translate key="tx_cart.mail.shipping_method" /></b></td>
+            <td style="font-family: Arial, Helvetica, sans-serif; font-size: 12px;">: {orderItem.shipping.name}</td>
+        </tr>
+        <f:if condition="{orderItem.comment}">
+            <tr>
+                <td colspan="2" style="font-family: Arial, Helvetica, sans-serif; font-size: 12px;"><b><f:translate key="tx_cart_domain_model_order_item.comment" /></b></td>
+                <td style="font-family: Arial, Helvetica, sans-serif; font-size: 12px;">: {orderItem.comment}</td>
+            </tr>
+        </f:if>
+        <tr>
+            <td height="10" style="font-size:10px; line-height:10px;">   </td><!-- Spacer -->
+        </tr>
+        </tbody>
+    </table>
 
     <f:render partial="Mail/Cart" arguments="{cart: cart}"/>
 </f:section>
