--- a/Resources/Private/Templates/Product/Show.html
+++ b/Resources/Private/Templates/Product/Show.html
@@ -78,6 +78,5 @@
         </ul>
     </f:if>
 
-    <f:link.action class="btn btn-default" action="list">Back to list</f:link.action>
-    <br/>
+    <f:link.external class="btn btn-default" uri="javascript:history.back();">{f:translate(key: 'tx_cart.history_back')}</f:link.external>
 </f:section>
