--- a/Resources/Private/Backend/Partials/Order/Show/Summary.html
+++ b/Resources/Private/Backend/Partials/Order/Show/Summary.html
@@ -22,16 +22,16 @@
         <f:translate key="tx_cart_domain_model_order_item.order_shipping"/>: {orderItem.shipping.name}
     </td>
     <td>
-        <cart:format.currency>{orderItem.orderShipping.net}</cart:format.currency>
+        <cart:format.currency>{orderItem.shipping.net}</cart:format.currency>
     </td>
     <td>
-        <cart:format.currency>{orderItem.orderShipping.gross}</cart:format.currency>
+        <cart:format.currency>{orderItem.shipping.gross}</cart:format.currency>
     </td>
     <f:for each="{orderItem.orderTotalTax}" as="orderTotalTax">
         <td>
-            <f:if condition="{0: orderTotalTax.orderTaxClass.id} == {0: orderItem.orderShipping.orderTaxClass.id}">
+            <f:if condition="{0: orderTotalTax.orderTaxClass.id} == {0: orderItem.shipping.orderTaxClass.id}">
                 <f:then>
-                    <cart:format.currency>{orderItem.orderShipping.orderTax.tax}</cart:format.currency>
+                    <cart:format.currency>{orderItem.shipping.orderTax.tax}</cart:format.currency>
                 </f:then>
                 <f:else>
                     <!-- -->
@@ -46,16 +46,16 @@
         <f:translate key="tx_cart_domain_model_order_item.order_payment"/>: {orderItem.payment.name}
     </td>
     <td>
-        <cart:format.currency>{orderItem.orderPayment.net}</cart:format.currency>
+        <cart:format.currency>{orderItem.payment.net}</cart:format.currency>
     </td>
     <td>
-        <cart:format.currency>{orderItem.orderPayment.gross}</cart:format.currency>
+        <cart:format.currency>{orderItem.payment.gross}</cart:format.currency>
     </td>
     <f:for each="{orderItem.orderTotalTax}" as="orderTotalTax">
         <td>
-            <f:if condition="{0: orderTotalTax.orderTaxClass.id} == {0: orderItem.orderPayment.orderTaxClass.id}">
+            <f:if condition="{0: orderTotalTax.orderTaxClass.id} == {0: orderItem.payment.orderTaxClass.id}">
                 <f:then>
-                    <cart:format.currency>{orderItem.orderPayment.orderTax.tax}</cart:format.currency>
+                    <cart:format.currency>{orderItem.payment.orderTax.tax}</cart:format.currency>
                 </f:then>
                 <f:else>
                     <!-- -->
