[TASK] #25 - add some error classes

--- a/Resources/Private/Partials/Cart/OrderForm/Address/Billing.html
+++ b/Resources/Private/Partials/Cart/OrderForm/Address/Billing.html
@@ -20,7 +20,7 @@
                                               required="true"/>
                             <f:form.validationResults for="billingAddress">
                                 <f:if condition="{validationResults.flattenedErrors.salutation}">
-                                    <span class="validation-error">{validationResults.flattenedErrors.salutation.0.message}</span>
+                                    <div class="validation-error alert alert-danger">{validationResults.flattenedErrors.salutation.0.message}</div>
                                 </f:if>
                             </f:form.validationResults>
                         </div>
@@ -49,7 +49,7 @@
                                               required="true"/>
                             <f:form.validationResults for="billingAddress">
                                 <f:if condition="{validationResults.flattenedErrors.firstName}">
-                                    <span class="validation-error">{validationResults.flattenedErrors.firstName.0.message}</span>
+                                    <div class="validation-error alert alert-danger">{validationResults.flattenedErrors.firstName.0.message}</div>
                                 </f:if>
                             </f:form.validationResults>
                         </div>
@@ -87,7 +87,7 @@
                                           required="true"/>
                         <f:form.validationResults for="billingAddress">
                             <f:if condition="{validationResults.flattenedErrors.email}">
-                                <span class="validation-error">{validationResults.flattenedErrors.email.0.message}</span>
+                                <div class="validation-error alert alert-danger">{validationResults.flattenedErrors.email.0.message}</div>
                             </f:if>
                         </f:form.validationResults>
                     </div>
@@ -118,7 +118,7 @@
                                                   required="true"/>
                                 <f:form.validationResults for="billingAddress">
                                     <f:if condition="{validationResults.flattenedErrors.street}">
-                                        <span class="validation-error">{validationResults.flattenedErrors.street.0.message}</span>
+                                        <div class="validation-error alert alert-danger">{validationResults.flattenedErrors.street.0.message}</div>
                                     </f:if>
                                 </f:form.validationResults>
                             </div>
@@ -139,7 +139,7 @@
                                                       required="true"/>
                                     <f:form.validationResults for="billingAddress">
                                         <f:if condition="{validationResults.flattenedErrors.zip}">
-                                            <span class="validation-error">{validationResults.flattenedErrors.zip.0.message}</span>
+                                            <div class="validation-error alert alert-danger">{validationResults.flattenedErrors.zip.0.message}</div>
                                         </f:if>
                                     </f:form.validationResults>
                                 </div>
@@ -159,7 +159,7 @@
                                                       required="true"/>
                                     <f:form.validationResults for="billingAddress">
                                         <f:if condition="{validationResults.flattenedErrors.city}">
-                                            <span class="validation-error">{validationResults.flattenedErrors.city.0.message}</span>
+                                            <div class="validation-error alert alert-danger">{validationResults.flattenedErrors.city.0.message}</div>
                                         </f:if>
                                     </f:form.validationResults>
                                 </div>
