[TASK] #35 - fix order payment success and payment cancel templates

--- a/Resources/Private/Templates/Order/PaymentCancel.html
+++ b/Resources/Private/Templates/Order/PaymentCancel.html
@@ -3,7 +3,9 @@
 <f:section name="main">
     <f:flashMessages renderMode="div" />
 
-    <div class="col-sm-12 col-md-12 col-lg-12">
-        <f:translate key="tx_cart.controller.order.action.payment_cancel.thank_you"/>
-    </div>
+    <f:if condition="{orderItem}">
+        <div class="col-sm-12 col-md-12 col-lg-12">
+            <f:translate key="tx_cart.controller.order.action.payment_cancel.thank_you"/>
+        </div>
+    </f:if>
 </f:section>
